refactor: 게시판 관련 controller, service, dto 리팩토링 완료